# ase-hdf5

./: .gitignore  README.md  pyproject.toml
.github/workflows/: publish.yaml  tests.yaml
examples/: style.py  usage.ipynb
src/ase_hdf5/: __init__.py  core.py  utils.py
tests/: test_core.py  test_utils.py  tests.py
